--- a/css/style.css
+++ b/css/style.css
@@ -844,6 +844,14 @@ body._lock {
           flex: 1 1 auto;
 }
 
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
+.main-page::-webkit-scrollbar {
+  width: 0px;
+}
+
 .main-page__body::-webkit-scrollbar {
   width: 0px;
 }
@@ -852,10 +860,12 @@ body._lock {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 0px 15px;
   -webkit-transition: all 0.6s ease 0s;
   -o-transition: all 0.6s ease 0s;
   transition: all 0.6s ease 0s;
+  height: 100%;
+  padding: 15px 15px 25px 15px;
+  overflow: auto;
 }
 
 .main-page::before {
@@ -864,12 +874,11 @@ body._lock {
   left: 0;
   content: "";
   width: 100%;
-  height: 100%;
+  height: calc(100% + 40px);
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .main-page__body {
-  padding: 15px 0px;
   position: relative;
   z-index: 8;
   display: -webkit-box;
@@ -885,7 +894,6 @@ body._lock {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  overflow: auto;
   gap: 30px;
   height: 100vh;
 }
