--- a/css/style.css
+++ b/css/style.css
@@ -874,7 +874,7 @@ body::-webkit-scrollbar {
   left: 0;
   content: "";
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
